assets/css/style.css
* {
  margin: 0;
}

body,
html {
  height: 100%;
  font-family: Arial, Helvetica, sans-serif;
}

ul {
  margin: 0;
  padding: 0;
}

.center {
  text-align: center;
}

/* header */
.hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
    url("../imgs/bg.jpg");
  height: 85%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  /* margin-top: 115px; */
}

/* Picture of me */
#me-image-header {
  width: 10em;
  border-radius: 50%;
  display: block;
  border: solid 6px white;
  margin: 0;
  margin-left: auto;
  margin-right: auto;
}

.hero-text {
  width: 515px;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

#name {
  font-family: "Roboto", sans-serif;
  font-size: 85px;
  margin-bottom: 25px;
}

#name-description {
  font-family: "Roboto Slab", serif;
  font-size: 50px;
  padding-top: 10px;
}

hr {
  width: 100px;
  margin-left: auto;
  margin-right: auto;
}

/* navigation */
/* body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
} */

.topnav {
  overflow: hidden;
  /*  background-color: #333; */
}

.topnav a {
  display: inline-block;
  color: white;
  text-align: center;
  padding: 14px 25px;
  text-decoration: none;
  font-size: 17px;
  font-family: "Roboto", sans-serif;
}

.topnav a:hover {
  /* background-color: #ddd; */
  color: lightsalmon;
}

/* .topnav a.active {
  background-color: #4CAF50;
  color: black;
} */

.topnav .icon {
  display: none;
}

.center {
  text-align: center;
}

/* nav .container-link {
  list-style: none;
  color: white;
  display: flex;
  justify-content: center;
  height: 20px;
  flex-direction: row;
  text-align: center;
}

nav ul .link {
  /*font-family: "Roboto", sans-serif;
  width: 300px;
  padding: 20px;
  
  width: 80%;
  margin: 15px auto;
}

.link a:link,
a:visited,
a:hover,
a:active {
  text-decoration: none;
}

.link a {
  color: white;
}

.link a:hover {
  color: darkgray;
} */

/* Sections */
.title h1 {
  /* padding-top: 30px; */
  font-family: "Roboto Slab", serif;
  padding-bottom: 30px;
  text-align: center;
  font-size: 30px;
  letter-spacing: 1px;
}

#about,
#portfolio,
#contact {
  background: lightsalmon;
}

#knowledge,
#hobbies {
  background: #ecf1fc;
}

section {
  padding-top: 60px;
  padding-bottom: 60px;
}

/* Laptop Section */
#laptop p {
  font-size: 20px;
}

#laptop {
  text-align: center;
}

.laptop-image {
  width: 600px;
}

/* About Section */

.bold {
  font-weight: bold;
}

.box-about-right .bold {
  padding-bottom: 20px;
  font-size: 20px;
}

.container-about {
  display: flex;
  justify-content: center;
}

.container-about div {
  width: 400px;
  padding: 20px;
}

.box-about-right {
  margin-top: auto;
  margin-bottom: auto;
}

#image-about {
  width: 18em;
  border-radius: 50%;
  display: block;
  border: solid 6px white;
  margin-left: auto;
}

/* Knowledge Section */
.container-knowledge {
  display: flex;
  justify-content: center;
}

.container-item-1 {
  display: flex;
}

.container-item-1-1 .container-item-2-2 {
  display: flex;
}

.container-item-1-1 div,
.container-item-2-2 div {
  background: white;
  padding: 15px;
}

.container-item-1-1-1,
.container-item-1-1-2,
.container-item-1-2-1,
.container-item-1-2-2 {
  margin: 10px;
  margin-left: 5px;
  margin-right: 5px;
  border-radius: 10px;
}

.container-item-1,
.container-item-2 {
  width: 400px;
  padding: 20px;
}

.container-item-1 {
  order: 2;
}

.container-item-2 {
  margin-top: auto;
  margin-bottom: auto;
  order: 1;
  /* text-align: center; */
}

.knowledge {
  padding-bottom: 20px;
  font-family: "Roboto", sans-serif;
}

/* Portfolio */

.portfolio-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
}

.portfolio-image {
  width: 370px;
  margin: 10px;
  border-radius: 10px;
}

.portfolio-item-1,
.portfolio-item-2,
.portfolio-item-3,
.portfolio-item-4,
.portfolio-item-5,
.portfolio-item-6 {
  position: relative;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  transition: 0.5s ease;
  background-color: rgba(81, 0, 186, 0.801);
  border-radius: 9px;
  margin: 10px;
  margin-bottom: 14px;
}

.portfolio-item-1:hover .overlay,
.portfolio-item-2:hover .overlay,
.portfolio-item-3:hover .overlay,
.portfolio-item-4:hover .overlay,
.portfolio-item-5:hover .overlay,
.portfolio-item-6:hover .overlay {
  opacity: 1;
}

/* .github-icon {
  margin: 20px;
} */

/* Hobbies */

.hobbies-container {
  display: flex;
  justify-content: center;
  text-align: center;
  flex-wrap: wrap;
}

.hobbies-column-1 {
  flex-wrap: wrap;
}

.hobbies-items {
  width: 265px;
}

.image-hobbies {
  width: 240px;
  border-radius: 50%;
}

.hobbies-item-1,
.hobbies-item-2,
.hobbies-item-3,
.hobbies-item-4 {
  position: relative;
}

.overlay-hobbies {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 50%;
}

.hobbies-item-1:hover .overlay-hobbies,
.hobbies-item-2:hover .overlay-hobbies,
.hobbies-item-3:hover .overlay-hobbies,
.hobbies-item-4:hover .overlay-hobbies {
  opacity: 1;
}

.text-hobbies {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  text-align: center;
  font-family: "Roboto", sans-serif;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  background: #0000008c;
  padding: 5px 10px;
  width: 82%;
}

.hobbies-description,
.portfolio-description,
.contact-description {
  padding-bottom: 50px;
}

.hobbies-column-1 {
  display: flex;
  justify-content: center;
}

/* Contact */

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 40%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
  font-family: "Roboto", sans-serif;
}

input,
textarea {
  font-family: "Open Sans", sans-serif;
  font-size: 1em;
  color: #666260;
  background: #fff;
  padding: 1em;
  transition: all 0.3s ease-in-out;
  width: 100%;
  border-radius: 0;
  display: block;
  margin-top: 5px;
  margin-bottom: 5px;
}

fieldset {
  border: none;
}

.submit {
  border: none;
}

.container-form {
  width: 500px;
  margin-left: auto;
  margin-right: auto;
}

.submit {
  width: 90px !important;
  margin: 10px !important;
}

/* button */

.button {
  background-color: #8c43ff;
  border: none;
  color: white;
  padding: 10px 15px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: 40px;
  transition-duration: 0.4s;
  /* margin: 4px 2px; */
}

.button-position {
  position: absolute;
  top: 65%;
  -webkit-transition-duration: 0.4s;
  /* Safari */

  cursor: pointer;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.button-code {
  left: 37%;
  padding: 10px 15px;
}

.button-site {
  left: 63%;
  padding: 10px 20px;
}

.button-border {
  background-color: transparent;
  color: white;
  border: 2px solid #8c43ff;
}

.button-border:hover {
  background-color: #8c43ff;
  color: white;
}

.button-about {
  margin-top: 20px;
}

/* .button1 {
  opacity: 1;
  transition: 0.5s ease;
} */

/* Footer Section */

#footer-section {
  text-align: center;
  font-size: 14px;
  /* height: 200px; */
  background-color: black;
  color: white;
  padding: 20px 0 20px 0;
}

.footer-social-spacing {
  margin-top: 12px;
}

.footer-link {
  word-spacing: 14px;
  font-weight: bold;
  padding: 30px 0 30px 0;
}

.footer-link a:hover {
  color: #8c43ff;
}

a:-webkit-any-link {
  cursor: pointer;
  text-decoration: none;
}

.footer-link a {
  color: white;
}

.social-footer {
  margin: 0 1px 10px 0;
}

.foot-icon {
  padding: 10px;
  font-size: 18px;
  width: 18px;
  text-align: center;
  text-decoration: none;
  border-radius: 50%;
}

.fa-facebook-f {
  background: #3b5998;
  color: white;
}

.fa-twitter {
  background: #55acee;
  color: white;
}

.fa-linkedin {
  background: #007bb5;
  color: white;
}

.fa-github {
  background: rgb(80, 80, 80);
  color: white;
}

.fa-instagram {
  background: linear-gradient(#b433a9, #fcad48);
  color: white;
}

.fab:hover {
  opacity: 0.7;
  color: lightslategray;
  text-decoration: none;
}

.footer-link-color {
  color: white;
  text-decoration: none;
}

.github-link {
  color: #8c43ff;
}

/* @media only screen and (max-width: 930px) {
  #name {
    font-size: 65px;
  }
} */

@media only screen and (max-width: 768px) {
  .hero-text {
    width: unset;
  }

  #name {
    font-size: 3.5em;
    line-height: 48px;
  }

  #name-description {
    font-size: 37px;
    line-height: 34px;
  }

  #me-image-header {
    margin-bottom: 15px;
  }

  .portfolio-image {
    width: 285px;
  }

  .portfolio-item-1,
  .portfolio-item-2,
  .portfolio-item-3,
  .portfolio-item-4,
  .portfolio-item-5,
  .portfolio-item-6 {
    align-self: center;
  }

  .portfolio-description,
  .about-description,
  .meet-description,
  .knowledge-description {
    width: 630px;
    margin-right: 20px;
    margin-left: 20px;
  }

  /* Button */
  .button-code {
    left: 34%;
    padding: 10px 15px;
  }

  .button-site {
    left: 66%;
    padding: 10px 20px;
  }

  .button-about {
    margin-left: 20px;
  }

  /* Hobbies */
  .text-hobbies {
    width: 85%;
  }

  .image-hobbies {
    width: 250px;
    margin-bottom: 15px;
  }

  .hobbies-items {
    /* width: 250px; */
    align-self: center;
  }

  /* Laptop */

  .responsive {
    width: 85%;
    height: auto;
  }

  /* Contact */

  input,
  textarea {
    width: 60%;
    margin: 10px auto 10px auto;
  }

  .container-form {
    width: auto;
  }

  fieldset {
    text-align: center;
  }

  .submit {
    margin: auto !important;
  }

  /* About */
  .container-about {
    flex-direction: column;
  }

  #image-about {
    margin: auto;
    width: 15em;
  }

  .container-about div {
    width: auto;
    /* padding: 20px; */
  }

  /* Knowledge */
  .container-knowledge {
    flex-direction: column;
  }

  .container-item-1-1 div,
  .container-item-2-2 div {
    padding: 3px;
  }

  .container-item-1,
  .container-item-2 {
    width: auto;
    justify-content: center;
  }
}

@media only screen and (min-width: 1500px) {
  .portfolio-container {
    width: 1500px;
    margin-left: auto;
    margin-right: auto;
  }

  .topnav a {
    padding-right: 60px;
    padding-left: 60px;
  }

  #me-image-header {
    width: 14em;
  }
}

@media only screen and (max-width: 670px) {

  .portfolio-description,
  .about-description,
  .meet-description,
  .knowledge-description {
    width: auto;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive-nav {
    position: relative;
  }

  .topnav.responsive-nav a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  .topnav.responsive-nav a {
    float: none;
    display: block;
    text-align: left;
  }

  .button-about {
    text-align: center;
    margin-left: unset;
  }
}

@media screen and (max-width: 600px) {
  .topnav a {
    display: none;
  }

  .topnav a.icon {
    float: right;
    display: block;
  }

  .topnav.responsive-nav {
    position: relative;
  }

  .topnav.responsive-nav .icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  .topnav.responsive-nav a {
    display: block;
  }
}

@media screen and (max-width: 450px) {
  .github-icon {
    margin-top: 20px;
  }

  .portfolio-description {
    padding-bottom: 20px;
  }

}


@media only screen and (max-width: 360px) {
  .portfolio-image {
    width: 285px;
  }

  #me-image-header {
    width: 8em;
  }

  .topnav a {
    font-size: 12px;
  }
}

